<resources>
    <string name="app_name">uas0602</string>


    <string-array name="liga_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>

    <array name="liga_img">
        <item>@drawable/english_premier</item>
        <item>@drawable/french_ligue_1</item>
        <item>@drawable/german_bundesliga</item>
        <item>@drawable/italian_serie_a</item>
        <item>@drawable/spanish_la_liga</item>
        <item>@drawable/portugeuese_premiera_liga</item>
        <item>@drawable/scotish_premier_league</item>
        <item>@drawable/english_league_1</item>
    </array>

    <string-array name="liga_id">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4344</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="league">League</string>
    <string name="favorites">Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- dummy string for ui purpose -->
    <string name="dummy_win">32</string>
    <string name="dummy_loss">22</string>
    <string name="dummy_draw">0</string>
    <string name="d">D:</string>
    <string name="l">L:</string>
    <string name="w">W:</string>
    <string name="dummy_team">Barcelona</string>
    <string name="dummy_desc">The Emirates Stadium (known as Ashburton Grove prior to sponsorship) is a football stadium in Holloway, London, England, and the home of Arsenal Football Club. With a capacity of 60,272, the Emirates is the third-largest football stadium in England after Wembley and Old Trafford.In 1997, Arsenal explored the possibility of relocating to a new stadium, having been denied planning permission by Islington Council to expand its home ground of Highbury. After considering various options (including purchasing Wembley), the club bought an industrial and waste disposal estate in Ashburton Grove in 2000. A year later they won the council\'s approval to build a stadium on the site; manager Arsène Wenger described this as the \"biggest decision in Arsenal\'s history\" since the board appointed Herbert Chapman. Relocation began in 2002, but financial difficulties delayed work until February 2004. Emirates Airline was later announced as the main sponsor for the stadium. Work was completed in 2006 at a cost of £390 million</string>
    <string name="dummy_league">League:</string>
    <string name="english_premier">English Premier League</string>
    <string name="dummy_stadium">Stadium:</string>
    <string name="emirates_stadium">Emirates Stadium</string>
    <string name="england">England</string>
    <string name="country">Country:</string>
    <string name="description">Description</string>

</resources>
