<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailTeamActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        android:layout_height="190dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgLeagueDetail"
                android:layout_width="160dp"
                android:layout_height="132dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/dummy_team"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/fc_barcelona" />

            <TextView
                android:id="@+id/tvNameTeamDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/dummy_team"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imgLeagueDetail"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorGrey"
                android:text="@string/dummy_league"
                app:layout_constraintStart_toEndOf="@+id/imgLeagueDetail"
                app:layout_constraintTop_toBottomOf="@+id/tvNameTeamDetail" />

            <TextView
                android:id="@+id/tvLeagueTeamDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/english_premier"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/tvNameTeamDetail" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/dummy_stadium"
                android:textColor="@color/colorGrey"
                app:layout_constraintStart_toEndOf="@+id/imgLeagueDetail"
                app:layout_constraintTop_toBottomOf="@+id/tvLeagueTeamDetail" />

            <TextView
                android:id="@+id/tvStadiumTeamDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/emirates_stadium"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/tvLeagueTeamDetail" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/country"
                android:textColor="@color/colorGrey"
                app:layout_constraintStart_toEndOf="@+id/imgLeagueDetail"
                app:layout_constraintTop_toBottomOf="@+id/tvStadiumTeamDetail" />

            <TextView
                android:id="@+id/tvCountryTeamDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/england"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/tvStadiumTeamDetail" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvDescriptionTeam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dummy_desc"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>